--- a/website/index.html
+++ b/website/index.html
@@ -65,7 +65,7 @@
             <div class="col-12 col-lg-8">
                 <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>:: Pin-Shot-Blue ::</strong><br><strong>PEG grammars in blueprint blue</strong></h1>
                 
-                <p class="mbr-text mbr-fonts-style display-7">Pin-Shot-Blue is a micro-service written in Rust using Pest and Axum crates. Pest parses a PEG grammar and Axum delivers the parse via a REST interface. Pin-Shot-Blue is a single-purpose project that offers PEG grammar specialization by tweaking the sourcecode (if you want to load a different PEG grammar). In that sense, it can be specialized to parse any PEG grammar.<br>However, the reference implementation directly supports only Quelle.<br><br>Incidentally, a companion micro-server, Blueprint-Blue, converts Pin-Shot-Blue parses into the Quelle object model for more seamless downstream processing.</p>
+                <p class="mbr-text mbr-fonts-style display-7">Pin-Shot-Blue is a micro-service written in Rust using Pest and Axum crates. Pest parses a PEG grammar and Axum delivers the parse via a REST interface. Pin-Shot-Blue is a single-purpose project that offers PEG grammar specialization by tweaking the source-code (if you want to load a different PEG grammar). In that sense, it can be specialized to parse any PEG grammar.<br>However, the reference implementation directly supports only Quelle.<br><br>Incidentally, a companion micro-server, Blueprint-Blue, converts Pin-Shot-Blue parses into the Quelle object model for more seamless downstream processing.</p>
                 
             </div>
         </div>
@@ -95,7 +95,7 @@
             <div class="col-12 col-lg-9">
                 <div class="image-wrapper">
                     <a href="http://github.com/kwonus/Quelle" target="_blank"><img src="assets/images/qcommand-1004x1159.png" alt="Mobirise Website Builder"></a>
-                    <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Figure 1 -- Quelle PEG grammar: an object representations</p>
+                    <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">Figure 1 -- Quelle PEG grammar: an object-oriented representation</p>
                 </div>
             </div>
         </div>
@@ -165,7 +165,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2947358" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Built with &#8204;</p><a style="z-index:1" href="https://mobirise.com">Mobirise </a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2947358" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Made with  &#8204;</p><a style="z-index:1" href="https://mobirise.com/builder/html-code-generator.html">HTML Code Generator</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
